--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"nette/nette": ">=2.0.0",
-		"nextras/latte-macros": "dev-master"
+		"nextras/latte-macros": "~1.0@RC"
 	},
 	"autoload": {
 		"psr-0": { "Nextras\\Datagrid": "" }
