--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,13 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"nette/nette": ">=2.0.0",
-		"nextras/latte-macros": "~1.0@RC"
+		"nette/nette": "~2.0",
+		"nextras/latte-macros": "~1.0.0"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "2.0-dev"
+		}
 	},
 	"autoload": {
 		"psr-0": { "Nextras\\Datagrid": "" }
