--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		}
 	],
 	"require": {
-		"php": "~5.3",
+		"php": ">=5.3",
 		"nette/application":      "~2.2",
 		"nette/component-model":  "~2.2",
 		"nette/utils":            "~2.2",
@@ -24,6 +24,6 @@
 		}
 	},
 	"autoload": {
-		"psr-4": { "Nextras\\Datagrid\\": "src/" }
+		"psr-4": { "Nextras\\Datagrid\\": "src" }
 	}
 }
