--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
 		"php": ">=5.6",
 		"nette/application": "~2.4",
 		"nette/component-model": "~2.3",
-		"nette/utils": "~2.4",
-		"nextras/latte-macros": "~1.1|~2.0"
+		"nette/utils": "~2.4"
 	},
 	"extra": {
 		"branch-alias": {
