--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"nette/application": "~2.4",
 		"nette/component-model": "~2.3",
 		"nette/utils": "~2.4",
-		"latte/latte": "~2.4"
+		"latte/latte": "~2.4",
+		"nette/forms": "~2.4"
 	},
 	"extra": {
 		"branch-alias": {
