--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
 		"php": ">=5.6",
 		"nette/application": "~2.4",
 		"nette/component-model": "~2.3",
+		"nette/forms": "~2.4",
 		"nette/utils": "~2.4",
-		"latte/latte": "~2.4",
-		"nette/forms": "~2.4"
+		"latte/latte": "~2.4"
 	},
 	"extra": {
 		"branch-alias": {
