add Czech translations

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
 		}
 	},
 	"autoload": {
-		"psr-4": { "Nextras\\Datagrid\\": "src" }
+		"psr-4": { "Nextras\\Datagrid\\": "src" },
+		"classmap": [
+			"src/exceptions.php"
+		]
 	}
 }
