--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"nette/application": "~3.0",
 		"nette/component-model": "~3.0",
 		"nette/forms": "~3.0",
-		"nette/utils": "~3.0",
+		"nette/utils": "~3.0 || ~4.0",
 		"latte/latte": "~2.9"
 	},
 	"extra": {
